@@ -1,3 +1,3 @@
 jobid	jobname	prog	num_segs	num_frames	maxvmem	cpu	exit_status
-(%[0-9]+(?:\.[a-zA-Z0-9-]+)?%)	vit0.identifydir.(%[0-9a-f]{32}%)	gmtkViterbi	4	8000	(%[0-9]+(?:\.[0-9]+)?%)	(%[0-9]+(?:\.[0-9]+)?%)	75
+(%[0-9]+(?:\.[a-zA-Z0-9-]+)?%)	vit0.identifydir.(%[0-9a-f]{32}%)	gmtkViterbi	4	8000	(%[0-9]+(?:\.[0-9]+)?%)	(%[0-9]+(?:\.[0-9]+)?%)	1
 (%[0-9]+(?:\.[a-zA-Z0-9-]+)?%)	vit0.identifydir.(%[0-9a-f]{32}%)	gmtkViterbi	4	8000	(%[0-9]+(?:\.[0-9]+)?%)	(%[0-9]+(?:\.[0-9]+)?%)	0
